--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,6 +11,12 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        bind:
+            $images_directory: '%images_directory%'
+
+    App\Service\FileUploader:
+        arguments:
+            $images_directory: '%images_directory%'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
