--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,5 +36,5 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/inscription, roles: IS_AUTHENTICATED_ANONYMOUSLY && !IS_AUTHENTICATED_FULLY }
+        # - { path: ^/inscription$, role: IS_AUTHENTICATED_ANONYMOUSLY, allow_if: "not has_role('ROLE_USER')"  }
         # - { path: ^/profile, roles: ROLE_USER }
