AJOUTE l'envoi d'email via MAILER de Symfony

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -4,3 +4,5 @@ twig:
     strict_variables: '%kernel.debug%'
     exception_controller: null
     form_themes: ['includes/_form_theme_bulma.html.twig']
+    paths:
+        '%kernel.project_dir%/assets': css
