--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,16 @@
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
         "knplabs/knp-paginator-bundle": "^5.3",
+        "lorenzo/pinky": "^1.0",
         "sensio/framework-extra-bundle": "^5.6",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "4.4.*",
         "symfony/framework-bundle": "4.4.*",
+        "symfony/mailchimp-mailer": "4.4.*",
+        "symfony/mailer": "4.4.*",
+        "symfony/messenger": "4.4.*",
         "symfony/monolog-bundle": "^3.6",
         "symfony/security-bundle": "4.4.*",
         "symfony/translation": "4.4.*",
@@ -25,13 +29,16 @@
         "symfony/validator": "4.4.*",
         "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "4.4.*",
-        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/cssinliner-extra": "^3.1",
+        "twig/extra-bundle": "^3.1",
+        "twig/inky-extra": "^3.1",
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "fzaninotto/faker": "^1.9",
         "symfony/debug-bundle": "^4.4",
+        "symfony/http-client": "4.4.*",
         "symfony/maker-bundle": "^1.21",
         "symfony/stopwatch": "^4.4",
         "symfony/var-dumper": "^4.4",
