--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -1,7 +1,7 @@
-framework:
-    messenger:
-        transports:
-            async: "%env(MESSENGER_TRANSPORT_DSN)%"
-
-        routing:
-            'Symfony\Component\Mailer\Messenger\SendEmailMessage':  async
+#framework:
+#    messenger:
+#        transports:
+#            async: "%env(MESSENGER_TRANSPORT_DSN)%"
+#
+#        routing:
+#            'Symfony\Component\Mailer\Messenger\SendEmailMessage':  async
