--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@creativebulma/bulma-divider": "^1.1.0",
         "@fortawesome/fontawesome-free": "^5.14.0",
-        "bulma": "^0.9.0"
+        "bulma": "^0.9.0",
+        "simplemde": "^1.11.2"
     }
 }
