--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-intl": "*",
+        "ext-mongodb": "*",
         "aymdev/commonmark-bundle": "^1.2",
         "composer/package-versions-deprecated": "^1.11",
         "doctrine/doctrine-bundle": "^2.1",
@@ -33,8 +34,7 @@
         "twig/cssinliner-extra": "^3.1",
         "twig/extra-bundle": "^3.1",
         "twig/inky-extra": "^3.1",
-        "twig/twig": "^2.12|^3.0",
-        "ext-mongodb": "*"
+        "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
